# tarefas

./: .azure-webapps-python-startup.sh  .dockerignore  .env  .env.example  DEPLOY_CHECKLIST.md  DEPLOY_GRATIS.md  Dockerfile  GUIA_LOCAL.md  GUIA_RENDER.md  Procfile  README.md  README_RENDER.md  RENDER_CONFIG.md  RENDER_SQLITE.md  START_HERE.md  WORKFLOW_CHANGES.md  build.sh  db.sqlite3  deploy.sh  pyproject.toml  railway.json  render.yaml  requirements.txt  start.sh
.github/workflows/: azure-webapps-python.yml  render-deploy.yml
config/: settings.py  urls.py
tarefas_app/: admin.py  models.py  urls.py  views.py
tarefas_app/migrations/: 0001_initial.py
templates/: base.html
templates/tarefas_app/: lista_tarefas.html
